force-app/main/default/objects/AM_Plan_financiacion__c/AM_Plan_financiacion__c.object-meta.xml
<CustomObject>
    <description>Maestro de planes de financiación para definir tasa de interés y límite de plazos por entidad financiera.</description>
    <label>Plan de financiación</label>
    <nameField>
        <label>Plan</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Planes de financiación</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>