force-app/main/default/objects/AM_Plan_financiacion__c/fields/AM_Activo__c.field-meta.xml
<CustomField>
    <fullName>AM_Activo__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>