force-app/main/default/objects/AM_Plan_financiacion__c/fields/AM_Aplica_garantia_Extendida__c.field-meta.xml
<CustomField>
    <fullName>AM_Aplica_garantia_Extendida__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Aplica garantía Extendida?</label>
    <type>Checkbox</type>
</CustomField>