force-app/main/default/objects/AM_Plan_financiacion__c/fields/AM_Entidad_financiera__c.field-meta.xml
<CustomField>
    <fullName>AM_Entidad_financiera__c</fullName>
    <label>Entidad financiera</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BANCO ALIADAS</fullName>
            </value>
            <value>
                <fullName>BANCO DE OCCIDENTE S.A.</fullName>
            </value>
            <value>
                <fullName>BANISTMO</fullName>
            </value>
            <value>
                <fullName>GIROS Y FINANZAS</fullName>
            </value>
            <value>
                <fullName>LINEA DE FINANCIACION FANALCA</fullName>
            </value>
            <value>
                <fullName>SUFINANCIAMIENTO</fullName>
            </value>
            <value>
                <fullName>PROGRESER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>