force-app/main/default/objects/AM_Plan_financiacion__c/fields/AM_Identificador_registro__c.field-meta.xml
<CustomField>
    <fullName>AM_Identificador_registro__c</fullName>
    <description>Campo utilizado para evitar duplicar la configuración para la misma entidad y plan financiero. El valor del campo es generado por un flujo de trabajo concatenando la entidad y plan financiero.</description>
    <label>Identificador registro</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>