force-app/main/default/objects/AM_Plan_financiacion__c/fields/AM_Plan_financiacion__c.field-meta.xml
<CustomField>
    <fullName>AM_Plan_financiacion__c</fullName>
    <label>Plan de financiación</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CBU</fullName>
            </value>
            <value>
                <fullName>Cliente Actual Corto Plazo</fullName>
            </value>
            <value>
                <fullName>Cliente Actual Largo Plazo</fullName>
            </value>
            <value>
                <fullName>Cliente Nuevo Corto Plazo</fullName>
            </value>
            <value>
                <fullName>Cliente Nuevo Corto Plazo 3 Meses</fullName>
            </value>
            <value>
                <fullName>Cliente Nuevo Largo Plazo</fullName>
            </value>
            <value>
                <fullName>Cliente preferencial</fullName>
            </value>
            <value>
                <fullName>Flexible</fullName>
            </value>
            <value>
                <fullName>Gracia</fullName>
            </value>
            <value>
                <fullName>Plan Empleado Hero</fullName>
            </value>
            <value>
                <fullName>Plan Empleados Organización Fanalca</fullName>
            </value>
            <value>
                <fullName>Plan especial cliente independiente</fullName>
            </value>
            <value>
                <fullName>Plan especial para empleados</fullName>
            </value>
            <value>
                <fullName>Plan pareja</fullName>
            </value>
            <value>
                <fullName>Plan universitario</fullName>
            </value>
            <value>
                <fullName>Tradicional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>