force-app/main/default/objects/AM_Plan_financiacion__c/fields/AM_Plazo_minimo__c.field-meta.xml
<CustomField>
    <fullName>AM_Plazo_minimo__c</fullName>
    <label>Plazo mínimo</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>