force-app/main/default/objects/AM_Plan_financiacion__c/fields/AM_Porcentage_de_descuento__c.field-meta.xml
<CustomField>
    <fullName>AM_Porcentage_de_descuento__c</fullName>
    <defaultValue>0</defaultValue>
    <label>% de descuento</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>