force-app/main/default/objects/AM_Plan_financiacion__c/fields/AM_Porcentage_de_robo__c.field-meta.xml
<CustomField>
    <fullName>AM_Porcentage_de_robo__c</fullName>
    <defaultValue>0</defaultValue>
    <label>% de robo</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>