force-app/main/default/objects/AM_Plan_financiacion__c/fields/AM_Porcentaje_Fondo_de_Garantia__c.field-meta.xml
<CustomField>
    <fullName>AM_Porcentaje_Fondo_de_Garantia__c</fullName>
    <label>% Fondo de Garantía</label>
    <precision>12</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>