force-app/main/default/objects/AM_Plan_financiacion__c/fields/AM_Porcentaje_garantia_extendida__c.field-meta.xml
<CustomField>
    <fullName>AM_Porcentaje_garantia_extendida__c</fullName>
    <defaultValue>0</defaultValue>
    <label>% Garantía extendida</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>