force-app/main/default/objects/AM_Plan_financiacion__c/fields/AM_Porcentaje_tasa_interes__c.field-meta.xml
<CustomField>
    <fullName>AM_Porcentaje_tasa_interes__c</fullName>
    <label>% Tasa interés</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>