force-app/main/default/objects/AM_Plan_financiacion__c/fields/AM_Valor_seguro_accidente__c.field-meta.xml
<CustomField>
    <fullName>AM_Valor_seguro_accidente__c</fullName>
    <label>Valor seguro accidente</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>