force-app/main/default/objects/AM_Plan_financiacion__c/validationRules/Validar_Porciento_Robo.validationRule-meta.xml
<ValidationRule>
    <fullName>Validar_Porciento_Robo</fullName>
    <active>true</active>
    <errorConditionFormula>OR( AM_Porcentage_de_robo__c  &gt; 100, AM_Porcentage_de_robo__c &lt; 0)</errorConditionFormula>
    <errorDisplayField>AM_Porcentage_de_robo__c</errorDisplayField>
    <errorMessage>No se aceptan valores menores de 0 ni mayores de 100</errorMessage>
</ValidationRule>