force-app/main/default/objects/AM_Plan_financiacion__c/validationRules/Validar_Porciento_Seguro_Deuda.validationRule-meta.xml
<ValidationRule>
    <fullName>Validar_Porciento_Seguro_Deuda</fullName>
    <active>true</active>
    <errorConditionFormula>OR(AM_Porcentaje_seguro_deuda__c &gt; 100, AM_Porcentaje_seguro_deuda__c &lt; 0)</errorConditionFormula>
    <errorDisplayField>AM_Porcentaje_seguro_deuda__c</errorDisplayField>
    <errorMessage>No se aceptan valores menores de 0 ni mayores de 100</errorMessage>
</ValidationRule>